# icpc-tehran-regionals

./: .gitignore  CMakeLists.txt
2014/: A.cpp  B.cpp
2015/: 2015-A.cpp  2015-B.cpp
2016/: 2016-A.cpp  B.cpp
2017/: A.cpp  B.cpp
2018/: 2018-A.cpp  B.cpp
2019/: 2019-B.cpp  A.cpp
2020/: 2020-B.cpp  A.cpp
2022/: 2022-B.cpp  2022-E.cpp  A.cpp
2023/: 2023-A.cpp  B.cpp
