cmake_minimum_required(VERSION 3.26)
project(icpc-tehran-regionals)

set(CMAKE_CXX_STANDARD 14)

add_executable(A2014 "2014/A.cpp")
add_executable(B2014 "2014/B.cpp")
add_executable(2015A "2015/A.cpp")
add_executable(2015B "2015/B.cpp")
add_executable(2016A "2016/A.cpp")
add_executable(2016B "2016/B.cpp")
add_executable(2017A "2017/A.cpp")
add_executable(2017B "2017/B.cpp")
add_executable(2018A "2018/A.cpp")
add_executable(2018B "2018/B.cpp")
add_executable(2019A "2019/A.cpp")
add_executable(2019B "2019/B.cpp")
add_executable(2020A "2020/A.cpp")
add_executable(2020B "2020/B.cpp")
add_executable(2022A "2014/A.cpp")
add_executable(2022B "2022/B.cpp")
add_executable(2022E "2022/E.cpp")
add_executable(2023A "2023/A.cpp")
add_executable(2023B "2023/B.cpp")